--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>あなたと最後の観測を　ヒント</title>
+    <title>UNSEEN　ヒント</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>あなたと最後の観測を　ヒント</h1>
+        <h1>UNSEEN　ヒント</h1>
         <div class="hint-time-guidelines">
             <p class="guideline-heading">ヒント使用時間目安</p>
-            <p>ゲーム開始から10分経過：1つめの記憶のかけらを手に入れていない場合ヒントを見る<br>
-            ゲーム開始から20分経過：2つめの記憶のかけらを手に入れていない場合ヒントを見る<br>
-            ゲーム開始から30分経過：3つめの記憶のかけらを手に入れていない場合ヒントを見る<br>
-            ゲーム開始から40分経過：4つめの記憶のかけらを手に入れていない場合ヒントを見る<br>
-            ゲーム開始から50分経過：STEP「観測」をクリアしていない場合ヒントを見る</p>
+            <p>ゲーム開始から10分経過：1st STEPをクリアしていない場合ヒントを見る<br>
+            ゲーム開始から20分経過：2nd STEPをクリアしていない場合ヒントを見る<br>
+            ゲーム開始から30分経過：3rd STEPをクリアしていない場合ヒントを見る<br>
+            ゲーム開始から40分経過：4th STEPをクリアしていない場合ヒントを見る<br>
+            ゲーム開始から50分経過：5th STEPをクリアしていない場合ヒントを見る</p>
         </div>
 
 
