Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>ご自身の進捗に合わせて確認したい箇所をタップしてください。<br>また、丸数字の小さい順に読み進めてください。</p>
+                            <p>ぬぬぬ</p>
                         </div>
                     
             <div class="accordion inner-accordion level-2">
