Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="accordion level-1">
                 
                 <div class="accordion-header">
-                    <span class="hint-name">STEP【視る】</span>
+                    <span class="hint-name">1st STEP</span>
                 </div>
                 <div class="accordion-content">
                     
