Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>マスターキーは出力カードαをRoom02のカイラリーに入れることで出力することができます。</p>
+                            <p>マスターキーは出力カードαをRoom02のカイラリーに入れることで出力することができます。しかし、みなさんはRoom02に直接行くことはできません。どうにかして遠隔で出力カードαをRoom02のカイラリーに入れることはできないでしょうか。</p>
                         </div>
                     
                 </div>
