Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p></p>
+                            <p>回転板は180度回転するという効果を持っています。白い部分を上下逆さまになったものと想定して、迷路をたどりましょう。</p>
                         </div>
                     
                 </div>
