--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>パン</p>
+                            <p>パン、コップ、ピューレにはそれぞれ破裂音が含まれるので、これらを無視します。よって答えは<span class="red-text"><strong>しこみ</strong></span>（仕込み）です。</p>
                         </div>
                     
                 </div>
