Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p></p>
+                            <p>ハイライト→ラ→シ→イシ→オオイシ→オオイタ、と変化するため、答えは<span class="red-text"><strong>おおいた</strong></span>（大分）です。</p>
                         </div>
                     
                 </div>
