Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>なんでやねん</p>
+                            <p>風船爆弾には赤と青の爆弾がついていますので、赤字と青字の指示は無視します。すると、「小さい順に風船を作れ」「交互に繋げば答えが見える」「3文字の答えを導け」</p>
                         </div>
                     
                 </div>
