Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>なんでやねん</p>
+                            <p>左のイラストは住民を表しています。</p>
                         </div>
                     
                 </div>
