Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>赤丸の個数は「</p>
+                            <p>赤丸の個数は「明かりを裂く一迅の矢は風となりて現世の人類総体を刺す」の文字数と対応しています。赤丸2個で「か」、青丸2個で「に」なので答えはかにです。</p>
                         </div>
                     
                 </div>
