Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p></p>
+                            <p>遠隔操作できるものとして過去にドローンがRoom02には出力されていましたが、それと連動するサングラスをすでにカイラリーに入れてしまっているのでドローンを操作することはできません。改めて、ドローンが出力されたときの状況を振り返ってみましょう。</p>
                         </div>
                     
                 </div>
