Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>フローチャートに「ドロ」という出力されるアイテムがあります。これを「ドローン」だと仮定してみましょう。しかし、ドローンはサングラスを出力した時にもう一方のカイラリーで出力されたもののはずです。つまり、</p>
+                            <p>フローチャートに「ドロ」という出力されるアイテムがあります。これを「ドローン」だと仮定してみましょう。しかし、出力時に資料室で落ちている垂れ幕の数が0のときに出力されるもののはずです。<br>このアイテムが「ドローン」だとすると、サングラスと同時に出力されたはずです。その時の状況を行動記録まとめから振り返ってみましょう。</p>
                         </div>
                     
                 </div>
