Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p></p>
+                            <p>サングラスが出力されたとき、紙5枚とハサミ1つをカイラリーに入れました。しかし、今「ドローン」と仮定しているものは「Room01のカイラリーにマスキングテープを入れたときに出力されるもの」であり、サングラスが出力されたときに同時に出力されたものではありません。</p>
                         </div>
                     
                 </div>
