--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>サングラスが出力されたとき、紙5枚とハサミ1つをカイラリーに入れました。しかし、今「ドローン」と仮定しているものは「Room01のカイラリーにマスキングテープを入れたときに出力されるもの」であり、サングラスが出力されたときに同時に出力されたものではありません。<br>つまり、サングラスと同時に出力された「ドローン」はインクで隠れているフローチャートの右側にあると推測することができます。<br>では、</p>
+                            <p>サングラスが出力されたとき、紙5枚とハサミ1つをカイラリーに入れました。しかし、今「ドローン」と仮定しているものは「Room01のカイラリーにマスキングテープを入れたときに出力されるもの」であり、サングラスが出力されたときに同時に出力されたものではありません。<br>つまり、サングラスと同時に出力された「ドローン」はインクで隠れているフローチャートの右側にあると推測することができます。<br>これまでの行動を振り返り、Room02で何が出力されていたのか整理してみましょう。<br>出力カードαにつながる手がかりがあるはずです。<br><br><span class="red-text"><strong>この先にヒントはありません。</strong></span></p>
                         </div>
                     
                 </div>
