--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>サングラスが出力されたとき、紙5枚とハサミ1つをカイラリーに入れました。<br>しかし、今「ドローン」と仮定しているものは「Room01のカイラリーにマスキングテープを入れたときに出力されるもの」であり、サングラスが出力されたときに同時に出力されたものではありません。<br>つまり、サングラスと同時に出力された「ドローン」はインクで隠れているフローチャートの右側にあると推測することができます。<br>ここで、これまでみなさんの身に起きた出来事や行動を振り返り、違和感のある部分を検証してみましょう。<br>出力カードαにつながる手がかりがあるはずです。<br><br>この先にヒントはありません。</p>
+                            <p>サングラスが出力されたとき、紙5枚とハサミ1つをカイラリーに入れました。<br>しかし、今「ドローン」と仮定しているものは「Room01のカイラリーにマスキングテープを入れたときに出力されるもの」であり、サングラスが出力されたときに同時に出力されたものではありません。<br>つまり、サングラスと同時に出力された「ドローン」はインクで隠れているフローチャートの右側にあると推測することができます。<br><br>これまでみなさんの身に起きた出来事や行動を振り返り、違和感のある部分を検証してみましょう。<br><br>この先にヒントはありません。</p>
                         </div>
                     
                 </div>
