Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p><strong>マスターキーは出力カードαをRoom02のカイラリーに入れることで出力することができます。<br></strong>しかし、みなさんはRoom02に直接行くことはできません。<br>どうにかして遠隔でカイラリーに入れることはできないでしょうか。<br>この選別はクロノスによって作られたものであり、解けるようにできています。<br>つまり、みなさんが今いるRoom01の部屋から出力カードαをRoom02のカイラリーに入れる手段があるということです。</p>
+                            <p><strong>マスターキーは出力カードαをRoom02のカイラリーに入れることで出力することができます。<br></strong>しかし、みなさんはRoom02に直接行くことはできません。<br>どうにかして遠隔でカイラリーに入れることはできないでしょうか。<br><br>この選別はクロノスによって作られたものであり、解けるようにできています。<br><strong>つまり、みなさんが今いるRoom01の部屋から出力カードαをRoom02のカイラリーに入れる手段があるということです。</strong></p>
                         </div>
                     
             <div class="accordion inner-accordion level-2">
