Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p></p>
+                            <p>青丸10個で「テン」であることから、青丸8個は「エイト」です。<br>つまり、中列のイラストはウエイトを表しています。<br>赤丸の個数は変わらず左から20個、23個ですので、それぞれ何を表すのかを考えてみましょう。</p>
                         </div>
                     
                 </div>
