Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p></p>
+                            <p>赤丸の数はアルファベット順を表しています。<br>20個ならばT、23ならばWです。つまり、左列から「Tent」「Weight」を青丸と赤丸はそれぞれ表しています。<br>よって答えは<span class="red-text"><strong>BONE</strong></span>（ほね）です。</p>
                         </div>
                     
                 </div>
