--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p></p>
+                            <p>隊長の背中に矢がまだ刺さっています。矢は音速で飛ぶのでその高さに通るものと予想できます。<br>実際に隊長を観察し、同じ高さにある青い丸の文字を拾うと「あか」となります。<br>風船爆弾を解除するには「赤い風船」を割る必要があります。<br>（隊長の矢は繊細なので抜かないであげてください。）</p>
                         </div>
                     
                 </div>
