Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>「赤丸は矢の出る罠の名前を見よ」という指示と左列のイラストの下部、中列の青丸が一部切り落とされました。<br>まずは左のイラストが何を表しているのかを考えてみましょう。</p>
+                            <p>「赤丸は矢の出る罠の名前を見よ」という指示と左列のイラストの下部、中列の青丸が一部、右列の青丸の一部が切り落とされました。<br>まずは左のイラストが何を表しているのかを考えてみましょう。</p>
                         </div>
                     
             <div class="accordion inner-accordion level-3">
