Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>答えは「<span class="red-text"><strong>いろ</strong></span>」です。</p>
+                            <p>ハイライト→ラ→イラ→イロと変化します。よって答えは「<span class="red-text"><strong>いろ</strong></span>」です。</p>
                         </div>
                     
                 </div>
