Update hint site via GAS

--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>隊長の背中に刺さっている矢と同じ高さにある青い丸の文字を拾うと「あか」となります。<br><span class="red-text"><strong>風船爆弾を解除するには「赤い風船」を割る必要があります。</strong></span></p>
+                            <p>隊長の背中に刺さっている矢と同じ高さにある青い丸の文字を右から拾うと「あか」となります。<br><span class="red-text"><strong>風船爆弾を解除するには「赤い風船」を割る必要があります。</strong></span></p>
                         </div>
                     
                 </div>
