--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p>着目すべき違和感は<br><span class="red-text"><strong>「スキャナのついている壁の穴に腕を通したとき」と「風船爆弾を解除したとき」</strong></span>の2つです。<br>これまでの行動を振り返ってみましょう。<br>部屋の構造や罠の仕組みを踏まえたとき、矛盾している点はないでしょうか。<br><br><span class="red-text"><strong>この先にヒントはありません。<br>(資料室へ見学しに行く必要はありません。現状持っている資料の情報から出力カードαをカイラリーに入れる手段を導くことができます)</strong></span></p>
+                            <p>着目すべき違和感は<br><span class="red-text"><strong>「スキャナのついている壁の穴に腕を通したとき」と「風船爆弾を解除したとき」と「5th STEPシートに記載されている写真の風船」</strong></span>の3つです。<br>これまでの行動を振り返ってみましょう。<br>部屋の構造や罠の仕組みを踏まえたとき、矛盾している点はないでしょうか。<br><br><span class="red-text"><strong>この先にヒントはありません。<br>(資料室へ見学しに行く必要はありません。現状持っている資料の情報から出力カードαをカイラリーに入れる手段を導くことができます)</strong></span></p>
                         </div>
                     
                 </div>
