--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
                 <div class="accordion-content">
                     
                         <div class="hint-body">
-                            <p></p>
+                            <p>スキャナの穴は、「スキャナについて」の情報において、貫通していると記載があるのに対し、最初、スキャナに腕を通したとき、貫通をしていませんでした。</p>
                         </div>
                     
                 </div>
